servicio de formularios

--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -50,11 +50,13 @@
     </main>
     <section class="contact">
         <h2>Get in touch</h2>
-        <form action="">
+        <form action="https://formspree.io/f/xyzgoqbk"
+        method="POST">
             <input type="text" name="name" placeholder="Name">
             <input type="email" name="email" placeholder="Email Adress">
             <input type="text" name="subjet" placeholder="Subject">
-            <textarea type="submit">Sen Message</textarea>
+            <textarea type="submit">Send Message</textarea>
+            <button type="submit">Send Message</button>
         </form>
     </section>
 
