--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -28,6 +28,16 @@
             </ul>
         </nav>
         <section class="header-content">
+            <section class="header-content-top">
+                
+                <img src="./assets/images/circle2.svg" alt="" srcset="">
+                <section class="about-me">
+                    <h2>About me</h2>
+                    <p>
+                        My name is Sourasith Phomhome. I’m a UI Designer and a instrutor based in Montreal. I’m curently working with Design+Code. I’m passionate about creating digital experiences and teaching design. My goal is to help beginners to grow their skills...read more 
+                    </p>
+                </section>
+            </section>
             <h1>Creative UI designer<br>Sourasith Phomhome<br>
                 Based in Monteal</h1>
             <div class="buttons">
@@ -37,12 +47,6 @@
             <img src="./assets/images/girl1.svg" alt="">
         </section>
     </header>
-    <section class="about-me">
-        <h2>About me</h2>
-        <p>
-            My name is Sourasith Phomhome. I’m a UI Designer and a instrutor based in Montreal. I’m curently working with Design+Code. I’m passionate about creating digital experiences and teaching design. My goal is to help beginners to grow their skills...read more 
-        </p>
-    </section>
     <main class="recents-work">
         <h2>My recent Work</h2>
         <div class="work-items">
